doing functions to wrap SNANA in python
PySNANA is coming for u

--- a/7point_picker.ipynb
+++ b/7point_picker.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b5e22133",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "from pathlib import Path\n",
+    "import subprocess\n",
     "\n",
-    "def filter_sn_lightcurve_random(input_file, output_file):\n",
+    "def filter_sn_lightcurve_random(input_file):\n",
     "    with open(input_file, 'r') as f:\n",
     "        lines = f.readlines()\n",
     "\n",
@@ -80,7 +82,7 @@
     "    # 5. Combine and sort chronologically\n",
     "    final_selection = [selected_less_0, selected_greater_10] + selected_in_range\n",
     "    final_selection.sort(key=lambda x: float(x.split()[1]))\n",
-    "\n",
+    "    output_file = input_file\n",
     "    # 6. Write out the new file\n",
     "    with open(output_file, 'w') as f:\n",
     "        for line in header:\n",
@@ -95,23 +97,86 @@
     "        for line in footer:\n",
     "            f.write(line)\n",
     "\n",
+    "\n",
+    "\n",
+    "def process_dat_files(directory_path, action_func):\n",
+    "    \"\"\"\n",
+    "    Finds every .dat file in the specified directory and applies \n",
+    "    the action_func to it.\n",
+    "    \"\"\"\n",
+    "    # Create a Path object for the target directory\n",
+    "    directory = Path(directory_path)\n",
+    "    \n",
+    "    # Check if the directory actually exists to avoid errors\n",
+    "    if not directory.is_dir():\n",
+    "        print(f\"Error: The directory '{directory_path}' does not exist.\")\n",
+    "        return\n",
+    "\n",
+    "    # Use .glob() to find all files ending in .dat\n",
+    "    for file_path in directory.glob('*.dat'):\n",
+    "        # Pass the file path to your custom action function\n",
+    "        action_func(file_path)\n",
+    "\n",
+    "def run_exe_and_do_thing(exe_path, args_list):\n",
+    "    \"\"\"\n",
+    "    Launches an executable with arguments, waits for it to finish, \n",
+    "    and then executes the next steps.\n",
+    "    \"\"\"\n",
+    "    command = [exe_path] + args_list\n",
+    "    \n",
+    "    print(f\"Launching: {exe_path}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # subprocess.run waits for the program to close before moving on.\n",
+    "        # capture_output=True grabs any print statements/errors from the .exe\n",
+    "        # text=True returns the output as a string instead of raw bytes\n",
+    "        result = subprocess.run(command, capture_output=True, text=True, check=True)\n",
+    "        \n",
+    "        print(\"The .exe finished running successfully!\")\n",
+    "        # print(f\"Here is what the .exe output: {result.stdout}\")\n",
+    "        \n",
+    "        # ==========================================\n",
+    "        # PUT YOUR \"DO A THING\" CODE DOWN HERE\n",
+    "        # ==========================================\n",
+    "        print(\"Doing the thing now...\")\n",
+    "        # do_something_else()\n",
+    "        \n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        # This triggers if the .exe crashes or returns an error code\n",
+    "        print(f\"The program failed with error code {e.returncode}.\")\n",
+    "        print(f\"Error details: {e.stderr}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Could not find the program at: {exe_path}\")\n",
+    "\n",
+    "# --- Example of how to use it ---\n",
+    "# my_exe = r\"C:\\path\\to\\your\\program.exe\"\n",
+    "# my_args = [\"--file\", \"data.txt\", \"--verbose\"]\n",
+    "# run_exe_and_do_thing(my_exe, my_args)\n",
+    "\n",
+    "\n",
+    "\n",
     "# To run it:\n",
     "# filter_sn_lightcurve_random('RKCHANGEME_SDSS_SN000062.DAT', 'FILTERED_RANDOM_SN000062.DAT')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9f5583cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_sn_lightcurve_random('RKCHANGEME_SDSS_SN000007.DAT', 'FILTERED_RANDOM_SN000007.DAT')"
+    "list_of_args = [\"sim_gigi.input\", \"OMEGA_MATTER 0.3\", \"w0_LAMBDA 0.0\"] \n",
+    "\n",
+    "run_exe_and_do_thing(\"snlc_sim.exe\", list_of_args)\n",
+    "\n",
+    "\n",
+    "filter_sn_lightcurve_random('RKCHANGEME_SDSS_SN000007.DAT')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e44be49a",
    "metadata": {},
    "outputs": [
@@ -137,9 +202,7 @@
      ]
     }
    ],
-   "source": [
-    "!ls"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
