wrapped till fit. to do: extract values from fit files

--- a/7point_picker.ipynb
+++ b/7point_picker.ipynb
@@ -117,97 +117,53 @@
     "        # Pass the file path to your custom action function\n",
     "        action_func(file_path)\n",
     "\n",
-    "def run_exe_and_do_thing(exe_path, args_list):\n",
+    "def run_exe_and_do_thing(omega_w):\n",
     "    \"\"\"\n",
     "    Launches an executable with arguments, waits for it to finish, \n",
     "    and then executes the next steps.\n",
+    "    omega_w is a list of strings, e.g. [\"OMEGA_MATTER 0.3\", \"w 0.7\"]\n",
     "    \"\"\"\n",
-    "    command = [exe_path] + args_list\n",
+    "    ## nomi dei files\n",
+    "    nome_run = \"TEST1\" ## it is like this in the two input files, watch out for it!\n",
+    "    nome_file_input = \"sim_SDSS_custom.input\"\n",
+    "    nome_file_nml = \"snfit_SDSS_custom.nml\"\n",
+    "    ## paths\n",
+    "    snana_dir = \"/home/ubuntu/SNANA\"\n",
+    "    bin_dir = f\"{snana_dir}/SNDIR/bin\"\n",
+    "    snlc_sim_path = f\"{bin_dir}/snlc_sim.exe\"\n",
+    "    snlc_fit_path = f\"{bin_dir}/snlc_fit.exe\"\n",
+    "    ## dir where we save snlc_sim.exe output .dat files \n",
+    "    sim_dir_path = f\"{snana_dir}/SNROOT/SIM/{nome_run}\"\n",
+    "    ## dir of the input files\n",
+    "    snlc_sim_input = f\"{snana_dir}/custom_input_files/{nome_file_input}\"\n",
+    "    snlc_fit_input = f\"{snana_dir}/custom_input_files/{nome_file_nml}\"\n",
+    "\n",
+    "    sim_command = [snlc_sim_path, snlc_sim_input] + omega_w\n",
+    "    fit_command = [snlc_fit_path, snlc_fit_input]\n",
+    "\n",
+    "    result = subprocess.run(fit_command, capture_output=True, text=True, check=True)\n",
     "    \n",
-    "    print(f\"Launching: {exe_path}\")\n",
+    "    print(\"The .exe finished running successfully!\")\n",
+    "    print(f\"Here is what the .exe output: {result.stdout}\")\n",
     "    \n",
-    "    try:\n",
-    "        # subprocess.run waits for the program to close before moving on.\n",
-    "        # capture_output=True grabs any print statements/errors from the .exe\n",
-    "        # text=True returns the output as a string instead of raw bytes\n",
-    "        result = subprocess.run(command, capture_output=True, text=True, check=True)\n",
-    "        \n",
-    "        print(\"The .exe finished running successfully!\")\n",
-    "        # print(f\"Here is what the .exe output: {result.stdout}\")\n",
-    "        \n",
-    "        # ==========================================\n",
-    "        # PUT YOUR \"DO A THING\" CODE DOWN HERE\n",
-    "        # ==========================================\n",
-    "        print(\"Doing the thing now...\")\n",
-    "        # do_something_else()\n",
-    "        \n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        # This triggers if the .exe crashes or returns an error code\n",
-    "        print(f\"The program failed with error code {e.returncode}.\")\n",
-    "        print(f\"Error details: {e.stderr}\")\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"Could not find the program at: {exe_path}\")\n",
-    "\n",
-    "# --- Example of how to use it ---\n",
-    "# my_exe = r\"C:\\path\\to\\your\\program.exe\"\n",
-    "# my_args = [\"--file\", \"data.txt\", \"--verbose\"]\n",
-    "# run_exe_and_do_thing(my_exe, my_args)\n",
+    "    # ==========================================\n",
+    "    # PUT YOUR \"DO A THING\" CODE DOWN HERE\n",
+    "    # ==========================================\n",
+    "    print(\"Doing the thing now...\")\n",
+    "    process_dat_files(sim_dir_path, filter_sn_lightcurve_random)\n",
+    "    print(\"extracted 7 points from dat files\")\n",
+    "    print(f\"Launching: {snlc_fit_path}\")\n",
+    "    result = subprocess.run(fit_command, capture_output=True, text=True, check=True)\n",
+    "    print(\"fit done\")\n",
     "\n",
     "\n",
-    "\n",
-    "# To run it:\n",
-    "# filter_sn_lightcurve_random('RKCHANGEME_SDSS_SN000062.DAT', 'FILTERED_RANDOM_SN000062.DAT')"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9f5583cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_of_args = [\"sim_gigi.input\", \"OMEGA_MATTER 0.3\", \"w0_LAMBDA 0.0\"] \n",
-    "\n",
-    "run_exe_and_do_thing(\"snlc_sim.exe\", list_of_args)\n",
-    "\n",
-    "\n",
-    "filter_sn_lightcurve_random('RKCHANGEME_SDSS_SN000007.DAT')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e44be49a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7point_picker.ipynb\t      RKCHANGEME_SDSS_SN000045.DAT\n",
-      "FILTERED_RANDOM_SN000007.DAT  RKCHANGEME_SDSS_SN000048.DAT\n",
-      "RKCHANGEME_SDSS.DUMP\t      RKCHANGEME_SDSS_SN000049.DAT\n",
-      "RKCHANGEME_SDSS.LIST\t      RKCHANGEME_SDSS_SN000050.DAT\n",
-      "RKCHANGEME_SDSS.README\t      RKCHANGEME_SDSS_SN000052.DAT\n",
-      "RKCHANGEME_SDSS_SN000007.DAT  RKCHANGEME_SDSS_SN000057.DAT\n",
-      "RKCHANGEME_SDSS_SN000010.DAT  RKCHANGEME_SDSS_SN000059.DAT\n",
-      "RKCHANGEME_SDSS_SN000014.DAT  RKCHANGEME_SDSS_SN000062.DAT\n",
-      "RKCHANGEME_SDSS_SN000024.DAT  RKCHANGEME_SDSS_SN000063.DAT\n",
-      "RKCHANGEME_SDSS_SN000031.DAT  RKCHANGEME_SDSS_SN000067.DAT\n",
-      "RKCHANGEME_SDSS_SN000032.DAT  RKCHANGEME_SDSS_SN000070.DAT\n",
-      "RKCHANGEME_SDSS_SN000035.DAT  RKCHANGEME_SDSS_SN000081.DAT\n",
-      "RKCHANGEME_SDSS_SN000038.DAT  RKCHANGEME_SDSS_SN000083.DAT\n",
-      "RKCHANGEME_SDSS_SN000039.DAT  RKCHANGEME_SDSS_SN000085.DAT\n",
-      "RKCHANGEME_SDSS_SN000044.DAT  RKCHANGEME_SDSS_SN000098.DAT\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "783d25e9",
    "metadata": {},
    "outputs": [],
    "source": []
