--- a/7point_picker.ipynb
+++ b/7point_picker.ipynb
@@ -10,6 +10,8 @@
     "import random\n",
     "from pathlib import Path\n",
     "import subprocess\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "def filter_sn_lightcurve_random(input_file):\n",
     "    with open(input_file, 'r') as f:\n",
@@ -117,6 +119,30 @@
     "        # Pass the file path to your custom action function\n",
     "        action_func(file_path)\n",
     "\n",
+    "def extract_columns(filename, columns_to_extract):\n",
+    "    headers = []\n",
+    "    data = []\n",
+    "    \n",
+    "    # Read through the file line by line\n",
+    "    with open(filename, 'r') as f:\n",
+    "        for line in f:\n",
+    "            if line.startswith('VARNAMES:'):\n",
+    "                # Get the column names, excluding the 'VARNAMES:' prefix\n",
+    "                headers = line.strip().split()[1:]\n",
+    "            elif line.startswith('SN:'):\n",
+    "                # Get the data values, excluding the 'SN:' prefix\n",
+    "                row = line.strip().split()[1:]\n",
+    "                data.append(row)\n",
+    "                \n",
+    "    # Create a DataFrame\n",
+    "    df = pd.DataFrame(data, columns=headers)\n",
+    "    \n",
+    "    # Convert string columns to numeric where possible\n",
+    "    df = df.apply(pd.to_numeric, errors='ignore')\n",
+    "    \n",
+    "    # Filter and return only the requested columns\n",
+    "    return df[columns_to_extract]\n",
+    "\n",
     "def run_exe_and_do_thing(omega_w):\n",
     "    \"\"\"\n",
     "    Launches an executable with arguments, waits for it to finish, \n",
@@ -128,7 +154,7 @@
     "    nome_file_input = \"sim_SDSS_custom.input\"\n",
     "    nome_file_nml = \"snfit_SDSS_custom.nml\"\n",
     "    ## paths\n",
-    "    snana_dir = \"/home/ubuntu/SNANA\"\n",
+    "    snana_dir = \"~/SNANA\"\n",
     "    bin_dir = f\"{snana_dir}/SNDIR/bin\"\n",
     "    snlc_sim_path = f\"{bin_dir}/snlc_sim.exe\"\n",
     "    snlc_fit_path = f\"{bin_dir}/snlc_fit.exe\"\n",
@@ -141,20 +167,20 @@
     "    sim_command = [snlc_sim_path, snlc_sim_input] + omega_w\n",
     "    fit_command = [snlc_fit_path, snlc_fit_input]\n",
     "\n",
-    "    result = subprocess.run(fit_command, capture_output=True, text=True, check=True)\n",
+    "    result = subprocess.run(sim_command, capture_output=True, text=True, check=True)\n",
     "    \n",
     "    print(\"The .exe finished running successfully!\")\n",
     "    print(f\"Here is what the .exe output: {result.stdout}\")\n",
-    "    \n",
-    "    # ==========================================\n",
-    "    # PUT YOUR \"DO A THING\" CODE DOWN HERE\n",
-    "    # ==========================================\n",
-    "    print(\"Doing the thing now...\")\n",
+    "    print(\"cleaning\")\n",
     "    process_dat_files(sim_dir_path, filter_sn_lightcurve_random)\n",
     "    print(\"extracted 7 points from dat files\")\n",
     "    print(f\"Launching: {snlc_fit_path}\")\n",
     "    result = subprocess.run(fit_command, capture_output=True, text=True, check=True)\n",
-    "    print(\"fit done\")\n",
+    "    print(result.stdout)\n",
+    "    print(\"fit done, output should be in where u launched this script\")\n",
+    "    columns = ['zHEL', 'zHELERR','zCMB', 'zCMBERR','zHD','zHDERR', 'mB', 'x1', 'c']\n",
+    "    fit_output = f\"{snana_dir}/scripts/{nome_run}.FITRES.TEXT\"\n",
+    "    extract_columns(fit_output, columns)\n",
     "\n",
     "\n",
     "\n"
@@ -166,12 +192,14 @@
    "id": "9f5583cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "run_exe_and_do_thing([\"\"])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "abc",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
