--- a/smcabc.ipynb
+++ b/smcabc.ipynb
@@ -27,7 +27,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3295335b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3330,50 +3332,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bfaf8c1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "type(os.path.basename('/home/ubuntu/SNANA/scripts/funky.py'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1e8ce8d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/sampled_lightcurves\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "diocane = Path('/home/ubuntu/sampled_lightcurves')\n",
-    "print((str(diocane)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "8d2f9513",
    "metadata": {},
@@ -3515,7 +3473,12 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "1819cf62",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4100,7 +4063,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "abc",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4114,7 +4077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
