--- a/smcabc.ipynb
+++ b/smcabc.ipynb
@@ -37,7 +37,7 @@
      "text": [
       "The .exe finished running successfully!\n",
       "Here is what the .exe output: \n",
-      " Full command: /home/ubuntu/SNANA/SNDIR/bin/snlc_sim.exe /home/ubuntu/SNANA/custom_input_files/sim_SDSS_custom.input OMEGA_MATTER 0.34 w0_LAMBDA -1 \n",
+      " Full command: snlc_sim.exe /home/ubuntu/SNANA/custom_input_files/sim_SDSS_custom.input GENVERSION hehehehe OMEGA_MATTER 0.34 w0_LAMBDA -1 \n",
       "\n",
       " SNANA_VERSION: 96036915\n",
       "\n",
@@ -55,7 +55,7 @@
       "  init_SNDATA_GLOBAL: \n",
       " --------------------------------------------------------\n",
       "  Initialize NstringMatch for sim-input file\n",
-      "  Read 89 words from user input file 1: \n",
+      "  Read 87 words from user input file 1: \n",
       "\t /home/ubuntu/SNANA/custom_input_files/sim_SDSS_custom.input \n",
       "\n",
       " ****************************************************************** \n",
@@ -67,7 +67,7 @@
       " ****************************************************************** \n",
       "    prep_user_inputs summary   \n",
       "\t SIMLIB file        : /home/ubuntu/SNANA/SNROOT/simlib/SDSS/SDSS2005_ugriz.SIMLIB   (start LIBID=0)\n",
-      "\t Generation Version : TEST1 \n",
+      "\t Generation Version : hehehehe \n",
       "\t Generation source  : RANDOM \n",
       "\t Generation model   : SALT2.JLA-B14 \n",
       "\t Number of LC to Generate: 0 \n",
@@ -351,20 +351,17 @@
       "\n",
       " ****************************************************************** \n",
       "   clr_VERSION  \n",
-      "\t LCMERGE Version TEST1 does not exist. \n",
-      "\t SIM Version TEST1 exists. \n",
-      "\t PHOTOMETRY Version TEST1 does not exist. \n",
-      "\t Removing version TEST1 files ... \n",
-      " execute command: rm -rf  /home/ubuntu/SNANA/SNROOT/SIM/TEST1/  \n",
-      " Done. \n",
+      "\t LCMERGE Version hehehehe does not exist. \n",
+      "\t SIM Version hehehehe does not exist. \n",
+      "\t PHOTOMETRY Version hehehehe does not exist. \n",
       "\n",
       " ****************************************************************** \n",
       "   Init SIMGEN_DUMP file   \n",
-      "\t open /home/ubuntu/SNANA/SNROOT/SIM/TEST1/TEST1.DUMP\n",
+      "\t open /home/ubuntu/SNANA/SNROOT/SIM/hehehehe/hehehehe.DUMP\n",
       "\n",
       " ****************************************************************** \n",
       "   set_TIMERS  \n",
-      "\t CPUTIME_INITIALIZE   = 0.000 second\n",
+      "\t CPUTIME_INITIALIZE   = 1.000 second\n",
       "\n",
       " ****************************************************************** \n",
       "    Begin Generating Lightcurves.   \n",
@@ -473,10 +470,10 @@
       " ****************************************************************** \n",
       "    Done generating 100[100] lightcurves[events] from RANDOM source.  \n",
       "\t (100 lightcurves requested => 12 were written) \n",
-      "\t CPUTIME_PROCESS_ALL  = 0.017 minute\n",
-      "\t CPUTIME_PROCESS_RATE(GENEV) = 100.000 second^-1\n",
-      "\t CPUTIME_PROCESS_RATE(GENLC) = 100.000 second^-1\n",
-      "\t CPUTIME_PROCESS_RATE(ACCEP) = 12.000 second^-1\n",
+      "\t CPUTIME_PROCESS_ALL  = 0.000 minute\n",
+      "\t CPUTIME_PROCESS_RATE(GENEV) = 0.000 second^-1\n",
+      "\t CPUTIME_PROCESS_RATE(GENLC) = 0.000 second^-1\n",
+      "\t CPUTIME_PROCESS_RATE(ACCEP) = 0.000 second^-1\n",
       "\n",
       " ****************************************************************** \n",
       "   README_DOCANA_DRIVER: Prepare README content (iflag=2)  \n",
@@ -486,7 +483,7 @@
       "  \n",
       "DOCUMENTATION:\n",
       "  OVERVIEW:\n",
-      "    TIME_START:   2026-02-14  18:07  # UT\n",
+      "    TIME_START:   2026-02-15  19:16  # UT\n",
       "    SURVEY:       SDSS\n",
       "    GENMODEL:     SALT2.JLA-B14\n",
       "    SNIA:         True\n",
@@ -501,7 +498,7 @@
       "# \n",
       "  INPUT_KEYS:\n",
       "# Output data\n",
-      "    GENVERSION:              TEST1\n",
+      "    GENVERSION:              hehehehe\n",
       "    NGENTOT_LC:              100  \n",
       "    FORMAT_MASK:             2  #  += 2,32,16 -> TEXT, FITS, randomCID\n",
       "    WRFLAG_MODELPAR:         1  \n",
@@ -596,10 +593,10 @@
       "    - List=2  FIRST=0.036033  LAST=0.894215   AVG(wrap) = 0.6 +_ 0.1 \n",
       "    - List=3  FIRST=0.705192  LAST=0.202716   AVG(wrap) = 0.0 +_ 0.0 \n",
       "# \n",
-      "    CPU_MINUTES:       0.02  \n",
-      "    NGENEV_TOT:        100    # (100/sec, total events)\n",
-      "    NGENLC_TOT:        100    # (100/sec, total LC)\n",
-      "    NGENLC_WRITE:      12    # (12/sec, LC passing trigger)\n",
+      "    CPU_MINUTES:       0.00  \n",
+      "    NGENEV_TOT:        100    # (0/sec, total events)\n",
+      "    NGENLC_TOT:        100    # (0/sec, total LC)\n",
+      "    NGENLC_WRITE:      12    # (0/sec, LC passing trigger)\n",
       "    NGENSPEC_WRITE:    0  \n",
       "    EFF(SEARCH+CUTS):  0.1200 +-  0.0325\n",
       "    NACCEPT:  [ 12, 0, 0 ]   # NSN(ACCEPT) for [ SpecID, noSpecID, zHOST]\n",
@@ -609,16 +606,17 @@
       "DOCUMENTATION_END:\n",
       "\n",
       "  AUXILIARY FILES: \n",
-      "  /home/ubuntu/SNANA/SNROOT/SIM/TEST1/TEST1.LIST \n",
-      "  /home/ubuntu/SNANA/SNROOT/SIM/TEST1/TEST1.README \n",
-      "  /home/ubuntu/SNANA/SNROOT/SIM/TEST1/TEST1.DUMP\n",
+      "  /home/ubuntu/SNANA/SNROOT/SIM/hehehehe/hehehehe.LIST \n",
+      "  /home/ubuntu/SNANA/SNROOT/SIM/hehehehe/hehehehe.README \n",
+      "  /home/ubuntu/SNANA/SNROOT/SIM/hehehehe/hehehehe.DUMP\n",
       "\n",
       " DONE with snlc_sim.\n",
       "\n",
       "cleaning\n",
+      "I'm not actually cleaning, that was just a bait, have some more dumptext HAHAHAHAHA\n",
       "extracted 7 points from dat files\n",
-      "Launching fit: /home/ubuntu/SNANA/SNDIR/bin/snlc_fit.exe\n",
-      "  Full command:  /home/ubuntu/SNANA/SNDIR/bin/snlc_fit.exe /home/ubuntu/SNANA/custom_input_files/snfit_SDSS_custom.nml\n",
+      "Launching fit: snlc_fit.exe\n",
+      "  Full command:  snlc_fit.exe /home/ubuntu/SNANA/custom_input_files/snfit_SDSS_custom.nml VERSION_PHOTOMETRY hehehehe TEXTFILE_PREFIX hehehehe_fits\n",
       "  \n",
       "  SNANA_VERSION: 96036915\n",
       "  \n",
@@ -637,8 +635,10 @@
       "  ######################################################## \n",
       "  \n",
       "    Read namelist file: /home/ubuntu/SNANA/custom_input_files/snfit_SDSS_custom.nml\n",
+      "      PROCESS COMMAND LINE ARG: VERSION_PHOTOMETRY\n",
+      "      PROCESS COMMAND LINE ARG: TEXTFILE_PREFIX\n",
       "&SNLCINP\n",
-      " VERSION_PHOTOMETRY=\"TEST1                                                                   \", 49*\"NULL                                                                    \",\n",
+      " VERSION_PHOTOMETRY=\"hehehehe                                                                \", 49*\"NULL                                                                    \",\n",
       " VERSION_PHOTOMETRY_WILDCARD=\"NULL                                                                                                                                                                                                                                                                                                        \",\n",
       " VERSION_REFORMAT_FITS=\"NULL                                                                    \",\n",
       " VERSION_REFORMAT_TEXT=\"NULL                                                                    \",\n",
@@ -664,7 +664,7 @@
       " SNMJD_OUT_FILE=\"                                                                                                                                                                                                                                                                                                            \",\n",
       " MNFIT_PKMJD_LOGFILE=\"MNFIT_PKMJD.LOG                                                                                                                                                                                                                                                                                             \",\n",
       " ROOTFILE_OUT=\"                                                                                                                                                                                                                                                                                                            \",\n",
-      " TEXTFILE_PREFIX=\"TEST1                                                                                                                                                                                                                                                                                                       \",\n",
+      " TEXTFILE_PREFIX=\"hehehehe_fits                                                                                                                                                                                                                                                                                               \",\n",
       " SNTABLE_LIST=\"SNANA FITRES(text:key)                                                                                                                                                                                                                                                                                      \",\n",
       " SNTABLE_FILTER_REMAP=\"                                                                                                                                                                                                                                                                                                            \",\n",
       " MARZFILE_OUT=\"                                                                                                                                                                                                                                                                                                            \",\n",
@@ -875,7 +875,7 @@
       "  init_SNDATA_GLOBAL: \n",
       "\n",
       " ****************************************************************** \n",
-      "   RD_SNTEXTIO_PREP: Prepare reading text format for TEST1  \n",
+      "   RD_SNTEXTIO_PREP: Prepare reading text format for hehehehe  \n",
       "  \n",
       "  ######################################################## \n",
       "    RDGLOBAL: FETCH GLOBAL SURVEY INFO from HEADER              \n",
@@ -1370,7 +1370,7 @@
       "  \n",
       "  \n",
       "                                                               \n",
-      "\t CPUTIME_INIT         = 1.000 second\n",
+      "\t CPUTIME_INIT         = 2.000 second\n",
       "  \n",
       "  ######################################################## \n",
       "    READ_EPIGNORE_FILE:\n",
@@ -1523,7 +1523,7 @@
       "   FIT MINIMUM (7) returns DATA    CHI2/dof=  86.9    / 64   PROB=0.03010\n",
       "   FIT MINIMUM (7) returns PRIOR   CHI2/dof= 0.276E-06/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =            7 in  0.106 seconds\n",
+      "    Finished fitting CID =            7 in  0.107 seconds\n",
       "  *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
       "     Done Reading CID 24                NMJD(found,stored)=  84   84\n",
       "       Analyze ISN=       2  for CID=24             NOBS(store,cuts)=  84->  84\n",
@@ -2333,7 +2333,7 @@
       "   FIT MINIMUM (57) returns DATA    CHI2/dof=  68.6    / 48   PROB=0.02718\n",
       "   FIT MINIMUM (57) returns PRIOR   CHI2/dof= 0.361E-05/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           57 in  0.099 seconds\n",
+      "    Finished fitting CID =           57 in  0.100 seconds\n",
       "  *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
       "     Done Reading CID 63                NMJD(found,stored)=  60   60\n",
       "       Analyze ISN=       8  for CID=63             NOBS(store,cuts)=  60->  60\n",
@@ -3014,7 +3014,7 @@
       "   FIT MINIMUM (98) returns DATA    CHI2/dof=  22.9    / 28   PROB=0.74049\n",
       "   FIT MINIMUM (98) returns PRIOR   CHI2/dof= 0.191E-05/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           98 in  0.076 seconds\n",
+      "    Finished fitting CID =           98 in  0.075 seconds\n",
       "  \n",
       "  ######################################################## \n",
       "    CALL FITPAR_END\n",
@@ -3038,25 +3038,24 @@
       "  \n",
       "    Bad PHOTOMETRY FLAG for        0 of       860 epochs\n",
       "  \n",
-      "\t CPUTIME_PROCESS_ALL  = 0.033 minute\n",
-      "\t CPUTIME_PROCESS_RATE = 6.000 second^-1\n",
+      "\t CPUTIME_PROCESS_ALL  = 0.017 minute\n",
+      "\t CPUTIME_PROCESS_RATE = 12.000 second^-1\n",
       "  \n",
       "    ENDING PROGRAM GRACEFULLY. \n",
       "\n",
       "fit done, output should be in where you launched this script\n",
+      "Not anymore you stoopid peple, I am a trickster\n",
       "Salt2mu output: \n",
-      " Full command: /home/ubuntu/SNANA/SNDIR/bin/SALT2mu.exe /home/ubuntu/SNANA/custom_input_files/SALT2mu_DES.input \n",
+      " Full command: SALT2mu.exe /home/ubuntu/SNANA/custom_input_files/SALT2mu_DES.input file=/home/ubuntu/SNANA/fits/hehehehe/hehehehe_fits.FITRES.TEXT prefix=SALT2mu_hehehehe \n",
       "\n",
       " SNANA_VERSION: 96036915\n",
       "\n",
       "\n",
       "\n",
-      "\t Start program /home/ubuntu/SNANA/SNDIR/bin/SALT2mu.exe \n",
+      "\t Start program SALT2mu.exe \n",
       "\n",
       "  Initialize NstringMatch for SALT2mu-input file\n",
       "Reading SALT2mu parameter-input file '/home/ubuntu/SNANA/custom_input_files/SALT2mu_DES.input' : \n",
-      " Parse 'file=/home/ubuntu/SNANA/scripts/SMC-ABC-for-Supernovae-Ia/TEST1.FITRES.TEXT' \n",
-      " Parse 'prefix=SALT2mu_TEST1' \n",
       " Parse 'zpecerr=0.001' \n",
       " Parse 'sig1fit=1' \n",
       " Parse 'sigmb=.10' \n",
@@ -3095,7 +3094,9 @@
       "\n",
       " Parse command-line options: \n",
       "  Initialize NstringMatch for SALT2mu command-line override\n",
-      " None found. Use all options from parameter-input file.\n",
+      " Parse 'file=/home/ubuntu/SNANA/fits/hehehehe/hehehehe_fits.FITRES.TEXT' \n",
+      " Parse 'prefix=SALT2mu_hehehehe' \n",
+      "\n",
       "\n",
       " ******* LCFIT MODEL PAR FROM SALT2 (M0_DEFAULT=-30.0) ******* \n",
       "\n",
@@ -3143,13 +3144,13 @@
       "\n",
       " ****************************************************************** \n",
       "   read_data  \n",
-      "\t Found 12 events in /home/ubuntu/SNANA/scripts/SMC-ABC-for-Supernovae-Ia/TEST1.FITRES.TEXT \n",
+      "\t Found 12 events in /home/ubuntu/SNANA/fits/hehehehe/hehehehe_fits.FITRES.TEXT \n",
       "\t malloc_INFO_DATA: allocate   0.008 MB for TABLEVAR\n",
       "\t malloc_INFO_DATA: allocate   0.002 MB for INFO_DATA\n",
       "\t malloc_INFO_DATA:   TOTAL    0.010 MB \n",
       "\n",
       "\n",
-      "   OPEN_TEXTFILE: /home/ubuntu/SNANA/scripts/SMC-ABC-for-Supernovae-Ia/TEST1.FITRES.TEXT \n",
+      "   OPEN_TEXTFILE: /home/ubuntu/SNANA/fits/hehehehe/hehehehe_fits.FITRES.TEXT \n",
       "   Read 81 table varNames from TEXT table=FITRES \n",
       "\t Prepare read-variable 'CID' (ivar=0, CAST=C) \n",
       "\t Prepare read-variable 'FIELD' (ivar=3, CAST=C) \n",
@@ -3293,12 +3294,12 @@
       "    <z_02>=0.350  muerr *= 1.050  [MURES check = -0.0000 ]\n",
       "\n",
       " Open output file with  cutmask_write=0 : \n",
-      "\t SALT2mu_TEST1.FITRES \n",
+      "\t SALT2mu_hehehehe.FITRES \n",
       " Wrote 12 SN  (12/12 used in fit) \n",
       "\n",
-      " Write MUDIF vs. redshift to SALT2mu_TEST1.M0DIF\n",
+      " Write MUDIF vs. redshift to SALT2mu_hehehehe.M0DIF\n",
       "\n",
-      " Write COV_stat matrix to SALT2mu_TEST1.COV\n",
+      " Write COV_stat matrix to SALT2mu_hehehehe.COV\n",
       "\n",
       " NFIT_EXEC = 1\n",
       "\n",
@@ -3314,11 +3315,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([40.69494, 39.13572, 39.25095, 40.7934 , 38.82887, 39.64004,\n",
-       "        39.96556, 41.4176 , 40.48367, 39.5977 , 40.40288, 41.74275,\n",
-       "        39.51298]),\n",
-       " array([0.25816, 0.13551, 0.1604 , 0.27524, 0.12202, 0.18327, 0.20269,\n",
-       "        0.36033, 0.25635, 0.17838, 0.25808, 0.39674, 0.17022]))"
+       "(array([40.86629, 39.29054, 39.41291, 38.99526, 39.76935, 40.12467,\n",
+       "        41.57593, 40.6202 , 39.75603, 40.55381, 41.92014, 39.68443]),\n",
+       " array([0.25816, 0.13551, 0.1604 , 0.12202, 0.18327, 0.20269, 0.36033,\n",
+       "        0.25635, 0.17838, 0.25808, 0.39674, 0.17022]))"
       ]
      },
      "execution_count": 3,
@@ -3327,7 +3327,7 @@
     }
    ],
    "source": [
-    "f.sim_wrapper_hubble([0.34,-1])"
+    "f.sim_wrapper_hubble([0.34,-1], 'hehehehe')"
    ]
   },
   {
@@ -4077,7 +4077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
