--- a/smcabc.ipynb
+++ b/smcabc.ipynb
@@ -9,23 +9,13 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from funky import *\n",
+    "import funky as f\n",
     "import scipy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6425f087",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import funkygigi as f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "3295335b",
    "metadata": {
     "scrolled": true
@@ -361,7 +351,7 @@
       "\n",
       " ****************************************************************** \n",
       "   set_TIMERS  \n",
-      "\t CPUTIME_INITIALIZE   = 1.000 second\n",
+      "\t CPUTIME_INITIALIZE   = 0.000 second\n",
       "\n",
       " ****************************************************************** \n",
       "    Begin Generating Lightcurves.   \n",
@@ -470,10 +460,10 @@
       " ****************************************************************** \n",
       "    Done generating 100[100] lightcurves[events] from RANDOM source.  \n",
       "\t (100 lightcurves requested => 12 were written) \n",
-      "\t CPUTIME_PROCESS_ALL  = 0.000 minute\n",
-      "\t CPUTIME_PROCESS_RATE(GENEV) = 0.000 second^-1\n",
-      "\t CPUTIME_PROCESS_RATE(GENLC) = 0.000 second^-1\n",
-      "\t CPUTIME_PROCESS_RATE(ACCEP) = 0.000 second^-1\n",
+      "\t CPUTIME_PROCESS_ALL  = 0.017 minute\n",
+      "\t CPUTIME_PROCESS_RATE(GENEV) = 100.000 second^-1\n",
+      "\t CPUTIME_PROCESS_RATE(GENLC) = 100.000 second^-1\n",
+      "\t CPUTIME_PROCESS_RATE(ACCEP) = 12.000 second^-1\n",
       "\n",
       " ****************************************************************** \n",
       "   README_DOCANA_DRIVER: Prepare README content (iflag=2)  \n",
@@ -483,7 +473,7 @@
       "  \n",
       "DOCUMENTATION:\n",
       "  OVERVIEW:\n",
-      "    TIME_START:   2026-02-15  19:16  # UT\n",
+      "    TIME_START:   2026-02-15  19:41  # UT\n",
       "    SURVEY:       SDSS\n",
       "    GENMODEL:     SALT2.JLA-B14\n",
       "    SNIA:         True\n",
@@ -593,10 +583,10 @@
       "    - List=2  FIRST=0.036033  LAST=0.894215   AVG(wrap) = 0.6 +_ 0.1 \n",
       "    - List=3  FIRST=0.705192  LAST=0.202716   AVG(wrap) = 0.0 +_ 0.0 \n",
       "# \n",
-      "    CPU_MINUTES:       0.00  \n",
-      "    NGENEV_TOT:        100    # (0/sec, total events)\n",
-      "    NGENLC_TOT:        100    # (0/sec, total LC)\n",
-      "    NGENLC_WRITE:      12    # (0/sec, LC passing trigger)\n",
+      "    CPU_MINUTES:       0.02  \n",
+      "    NGENEV_TOT:        100    # (100/sec, total events)\n",
+      "    NGENLC_TOT:        100    # (100/sec, total LC)\n",
+      "    NGENLC_WRITE:      12    # (12/sec, LC passing trigger)\n",
       "    NGENSPEC_WRITE:    0  \n",
       "    EFF(SEARCH+CUTS):  0.1200 +-  0.0325\n",
       "    NACCEPT:  [ 12, 0, 0 ]   # NSN(ACCEPT) for [ SpecID, noSpecID, zHOST]\n",
@@ -1370,7 +1360,7 @@
       "  \n",
       "  \n",
       "                                                               \n",
-      "\t CPUTIME_INIT         = 2.000 second\n",
+      "\t CPUTIME_INIT         = 1.000 second\n",
       "  \n",
       "  ######################################################## \n",
       "    READ_EPIGNORE_FILE:\n",
@@ -1658,7 +1648,7 @@
       "   FIT MINIMUM (24) returns DATA    CHI2/dof=  56.7    / 64   PROB=0.72996\n",
       "   FIT MINIMUM (24) returns PRIOR   CHI2/dof= 0.610E-08/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           24 in  0.118 seconds\n",
+      "    Finished fitting CID =           24 in  0.120 seconds\n",
       "  *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
       "     Done Reading CID 39                NMJD(found,stored)=  48   48\n",
       "       Analyze ISN=       3  for CID=39             NOBS(store,cuts)=  48->  48\n",
@@ -2063,7 +2053,7 @@
       "   FIT MINIMUM (48) returns DATA    CHI2/dof=  45.5    / 56   PROB=0.84137\n",
       "   FIT MINIMUM (48) returns PRIOR   CHI2/dof= 0.248E-07/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           48 in  0.135 seconds\n",
+      "    Finished fitting CID =           48 in  0.136 seconds\n",
       "  *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
       "     Done Reading CID 52                NMJD(found,stored)=  52   52\n",
       "       Analyze ISN=       6  for CID=52             NOBS(store,cuts)=  52->  52\n",
@@ -2744,7 +2734,7 @@
       "   FIT MINIMUM (81) returns DATA    CHI2/dof=  75.3    / 68   PROB=0.25391\n",
       "   FIT MINIMUM (81) returns PRIOR   CHI2/dof= 0.141E-06/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           81 in  0.297 seconds\n",
+      "    Finished fitting CID =           81 in  0.300 seconds\n",
       "  *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
       "     Done Reading CID 85                NMJD(found,stored)= 184  184\n",
       "       Analyze ISN=      11  for CID=85             NOBS(store,cuts)= 184-> 184\n",
@@ -3014,7 +3004,7 @@
       "   FIT MINIMUM (98) returns DATA    CHI2/dof=  22.9    / 28   PROB=0.74049\n",
       "   FIT MINIMUM (98) returns PRIOR   CHI2/dof= 0.191E-05/  0   PROB=1.00000\n",
       "  \n",
-      "    Finished fitting CID =           98 in  0.075 seconds\n",
+      "    Finished fitting CID =           98 in  0.074 seconds\n",
       "  \n",
       "  ######################################################## \n",
       "    CALL FITPAR_END\n",
@@ -3038,8 +3028,8 @@
       "  \n",
       "    Bad PHOTOMETRY FLAG for        0 of       860 epochs\n",
       "  \n",
-      "\t CPUTIME_PROCESS_ALL  = 0.017 minute\n",
-      "\t CPUTIME_PROCESS_RATE = 12.000 second^-1\n",
+      "\t CPUTIME_PROCESS_ALL  = 0.033 minute\n",
+      "\t CPUTIME_PROCESS_RATE = 6.000 second^-1\n",
       "  \n",
       "    ENDING PROGRAM GRACEFULLY. \n",
       "\n",
@@ -3321,7 +3311,7 @@
        "        0.25635, 0.17838, 0.25808, 0.39674, 0.17022]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
